--- a/assets/less/components/accordion.less
+++ b/assets/less/components/accordion.less
@@ -142,7 +142,8 @@ a.ui-button:active,
     color: @yellow-color;
     position: relative;
     text-transform: uppercase;
-    max-width: 135px;
+    max-width: fit-content;
+    padding-right: 22px;
     &:after{
         position: absolute;
         right: 0;
@@ -407,7 +408,7 @@ a.ui-button:active,
                 gap: 10px;
                 flex-shrink: 0;
                 color: #FFF;
-                font-family: Arial;
+
                 font-size: 14px;
                 font-style: normal;
                 font-weight: 400;
@@ -496,7 +497,8 @@ a.ui-button:active,
         color: @yellow-color;
         position: relative;
         text-transform: uppercase;
-        max-width: 135px;
+        max-width: fit-content;
+        padding-right: 22px;
         &:after{
             position: absolute;
             right: 0;
