--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -59,7 +59,7 @@ button:not(:disabled) {
         margin-bottom: 0!important;
         i{
             background: url("../../assets/images/email-icon.svg") no-repeat;
-            background-position: left 7px;
+            background-position: left 5px;
             background-size: 18px;
             width: 20px;
             height: 28px;
@@ -96,14 +96,14 @@ button:not(:disabled) {
     border-radius: 10px;
     /* Shadow/xs */
     box-shadow: 0px 1px 2px 0px rgba(198, 228, 246, 0.05);
-    font-family: Arial;
+
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 100%; /* 16px */
     letter-spacing: -0.48px;
     display: flex;
-    width: 130px;
+    width: fit-content;
     height: 50px;
     align-items: center;
     justify-content: center;
