--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -34,6 +34,7 @@
         font-weight: 400;
         line-height: normal;
         letter-spacing: -0.48px;
+        font-family: LiberationSans;
 
 
     }
@@ -192,7 +193,7 @@
     }
 
     &.scrolled{
-        background-color: @heading-text-color;
+        background-color: black;
         padding-top: 0;
         padding-bottom: 0;
         height: 100px;
