--- a/assets/less/pages/contact.less
+++ b/assets/less/pages/contact.less
@@ -17,6 +17,9 @@
         text-align: center;
         justify-content: center;
         justify-self: center;
+        position: relative;
+
+
 
         .email_container{
             background: @link-color;
@@ -28,12 +31,26 @@
             padding: 1px 0;
         }
         .coordinator_image{
+            position: relative;
             img{
                 object-fit: cover;
                 width: 298px;
                 height: 312px;
                 max-width: 100%;
                 border-radius: 20px;
+            }
+
+            .uni_label{
+                position: absolute;
+                top: 16px;
+                left: 14px;
+                content: '';
+                width: 89px;
+                height: 41px;
+                background: white url("../../assets/images/uni-reading.svg") center no-repeat;
+                background-size: 71px 24px;
+                border-radius: 9px;
+
             }
         }
         .coordinator_info{
@@ -74,6 +91,13 @@
                 line-height: 100%; /* 16px */
                 letter-spacing: -0.48px;
                 margin-top: 28px;
+                transition: all 0.5s ease-in-out;
+
+                &:hover{
+                    i{
+                        display: none;
+                    }
+                }
             }
         }
 
