--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -81,7 +81,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PWW5NKQ"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<div class="content-wrapper {{this.page.id}}">
+<div class="content-wrapper {{this.page.id}}" {% if user and this.page.id == 'home' %} style="margin-top: 71px;" {% endif %} >
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="X0nPVr3s"></script>
     <!-- Header -->
