--- a/partials/relatedarticles.htm
+++ b/partials/relatedarticles.htm
@@ -1,4 +1,4 @@
-<div class="related-news-records news">
+<div class="related-news-records">
 {% for record in related %}
     <div class="news-item">
         <div class="home-news-cover">
