--- a/assets/less/components/loggedin_menu.less
+++ b/assets/less/components/loggedin_menu.less
@@ -17,6 +17,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        border-left: 1px solid #E4E4E4;
         img{
             width: auto;
             float: left;
@@ -37,6 +38,7 @@
     .navbar-loggedin-user{
         top: 0;
         z-index: 99;
+        position: fixed;
     }
 }
 
@@ -56,9 +58,14 @@
 }
 
 .navbar-loggedin-user ul li a{
-  color: @heading-text-color;
-  max-width: 150px;
-  padding: 10px;
+    color: #575757;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.48px;
+
   .breakpoint-large-down({
     padding: 0;
     font-size: 16px;
@@ -94,7 +101,7 @@
 }
 
 .profile_name span{
-  color: @heading-text-color;
+  color: #575757;
   .breakpoint-large-down({
     display: none;
   })
