--- a/assets/less/pages/internal-documents.less
+++ b/assets/less/pages/internal-documents.less
@@ -484,22 +484,33 @@ a:hover .arrow-left{
 
 .internal-documents, .documents-search{
 
+    .btn-primary{
+        width: fit-content;
+        margin: 10px auto;
+    }
+
+    .file_container{
+        border-radius: 8px;
+        background: #FFF;
+        padding: 12px;
+        margin-bottom: 10px;
+    }
+
     .text-grey-search-btn{
         color: @default-color;
     }
 
   h4{
     text-transform: none;
-    font-family: "Clear Sans";
   }
   .accordion-toggle{
-    border-radius: 50px;
-    border: 1px solid @link-color;
     padding: 20px !important;
+      border-radius: 8px;
     margin: 0!important;
     cursor: pointer;
     width: 100%;
-    background: @secondary-color;
+    background: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.09);
     color: @default-color;
     font-size: 20px;
     font-weight: normal;
@@ -555,22 +566,22 @@ a:hover .arrow-left{
       position: relative;
       top: unset;
       width: auto;
-      height: 42px;
+      height: 40px;
       /* max-width: 1600px; */
       left: 0;
       right: 0;
       z-index: 11;
 
+
       &.form-control{
         display: block;
-        width: 100%;
+        width: 40%;
         height: 30px;
-        font-size: 18px;
+        font-size: 16px;
         color: #122642;
         background-color: #ffffff;
-        border-top-left-radius: 12px;
-        border-bottom-left-radius: 12px;
-        border: 1px solid @border-color!important;
+        border-top-left-radius: 25px;
+        border-bottom-left-radius: 25px;
         border-right: 0!important;
         padding: 5px 10px;
       }
@@ -581,10 +592,12 @@ a:hover .arrow-left{
       }
   }
 
-  .search-btn{
-      margin-right: 20px;
+  .text-grey-search-btn{
       cursor: pointer;
-
+      background-color: #ffffff;
+      border-top-right-radius: 25px;
+      border-bottom-right-radius: 25px;
+      padding: 5px 8px;
   }
 
 }
@@ -608,8 +621,9 @@ a:hover .arrow-left{
     .sidebar_menu_container{
         border-radius: 0px 10px 0px 0px;
         background: #FFF;
-        box-shadow: 5px 0 4px 0px rgba(0, 0, 0, 0.09);
+        box-shadow: 0px 0 15px 0px rgba(0, 0, 0, 0.09);
         padding: 0;
+        min-height: 80vh;
 
         .sidebar_menu_list{
             .col-xs-12{
@@ -663,5 +677,6 @@ a:hover .arrow-left{
 
     .folders_container{
         padding: 40px;
+        background: #F2F3F4;
     }
 }
