--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -39,7 +39,7 @@
         margin: 30px 0 !important;
         font-size: 16px;
         position: relative;
-        width: 95%;
+        width: 95% !important;
         height: 95%;
     }
 
@@ -285,12 +285,9 @@
 
     .field {
         margin-right: 10px;
+        margin-bottom: 0;
 
-        .breakpoint-laptop-down({
-            margin-bottom: 20px;
-        });
-
-        .breakpoint-small-down({
+        .breakpoint-large-down({
             margin-right: 0px;
             margin-bottom: 20px;
             width: 100%;
@@ -317,8 +314,12 @@
             background: #ffffff;
             position: unset !important;
             width: 100%;
-            font-size: 18px !important;
-            color: #122642;
+            color: #B1B1B1;
+
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            letter-spacing: -0.28px;
             box-sizing: border-box;
             padding: 0.7rem 1rem;
             line-height: 1.3em;
@@ -353,10 +354,10 @@
         appearance: none !important;
         padding: 10px !important;
         border: 1px solid #ccc !important;
-        border-radius: 20px !important;
-        font-size: 16px !important;
+        //border-radius: 20px !important;
+        //font-size: 16px !important;
         outline: none !important;
-        width: 150px !important;
+        width: 100px !important;
         background: url("../../assets/images/library-arrow.svg") center no-repeat !important;
         background-size: 11px !important;
         background-position: calc(100% - 10px) center !important
@@ -387,9 +388,11 @@
 
     .form-control {
         display: block;
-        width: 139px;
-        font-size: 18px;
-        color: #122642;
+        width: 46px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        letter-spacing: -0.28px;
         border-radius: 0px 0px 0px 0px;
         -moz-border-radius: 0px 0px 0px 0px;
         -webkit-border-radius: 0px 0px 0px 0px;
@@ -425,7 +428,7 @@
     height: 47px;
     width: 37px;
     background: url(../../assets/images/library-search.svg) center no-repeat;
-    background-size: 22px;
+    background-size: 16px;
 }
 
 #clearBtn {
@@ -496,24 +499,24 @@
         width: fit-content;
         cursor: pointer;
         color: #766B48;
-        font-size: 17px;
+        font-size: 15px;
         font-style: normal;
         font-weight: 400;
         line-height: 115%; /* 19.55px */
         letter-spacing: -0.34px;
-        padding: 8px 16px;
+        padding: 0px 16px;
         background: #DED6BC;
         border-radius: 30px;
+        height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         .breakpoint-small-down({
-            display: block;
-            margin-left: 0px;
             width: 100%;
-            padding: 5px 0;
             text-align: center;
             margin-right: 0px;
             margin-bottom: 8px;
-
         });
 
         &:hover {
