--- a/assets/less/pages/news.less
+++ b/assets/less/pages/news.less
@@ -132,38 +132,6 @@ nav:not(.navbar){
 }
 
 
-.related-articles-container {
-    width: 378px;
-    max-width: 100%;
-    justify-content: start;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-
-    h2{
-        width: 378px;
-        max-width: 100%;
-        font-size: 27px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: -0.54px;
-    }
-
-    .related-news-records{
-        width: 378px;
-        max-width: 100%;
-        justify-self: end;
-    }
-
-    .news-item{
-        margin-bottom: 40px;
-    }
-}
-
-
-
-
 .news{
     .news-list{
         width: 100%;
@@ -233,7 +201,7 @@ nav:not(.navbar){
 
         .news-title{
             color: #422F1F;
-            font-family: Arial;
+
             font-size: 22px;
             font-style: normal;
             font-weight: 400;
@@ -260,7 +228,7 @@ nav:not(.navbar){
             color: #FFF;
 
             text-align: center;
-            font-family: Arial;
+
             font-size: 17px;
             font-style: normal;
             font-weight: 400;
@@ -332,7 +300,7 @@ nav:not(.navbar){
                 gap: 10px;
                 flex-shrink: 0;
                 color: #FFF;
-                font-family: Arial;
+
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 400;
@@ -417,7 +385,7 @@ nav:not(.navbar){
             gap: 10px;
             flex-shrink: 0;
             color: #766B48;
-            font-family: Arial;
+
             font-size: 17px;
             font-style: normal;
             font-weight: 400;
@@ -534,7 +502,7 @@ nav:not(.navbar){
             color: #FFF;
 
             text-align: center;
-            font-family: Arial;
+
             font-size: 17px;
             font-style: normal;
             font-weight: 400;
@@ -605,7 +573,7 @@ nav:not(.navbar){
                 gap: 10px;
                 flex-shrink: 0;
                 color: #FFF;
-                font-family: Arial;
+
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 400;
@@ -685,111 +653,216 @@ nav:not(.navbar){
 }
 
 
-.related_articles_news{
 
-    .news_column{
-        display: flex;
-        justify-content: center;
-        margin-bottom: 50px;
-        position: relative;
-        width: 357px;
+.related-articles-container {
+    width: 416px;
+    max-width: 100%;
+    justify-content: start;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+
+    h2{
+        width: 416px;
         max-width: 100%;
-
-        .news-container{
-            display: flex;
-            justify-content: start;
-            flex-direction: column;
-            padding: 0;
-            h3{
-                text-align: left;
-            }
-        }
-
-        .news-image{
-            width: 357px;
-            height: 221px;
-            overflow: hidden;
-            border-radius: 10px;
-            padding: 0;
-            img{
-                object-fit: cover;
-                max-width: 100%;
-                border-radius: 10px;
-                -webkit-transition: all 0.5s ease; /* Safari and Chrome */
-                -moz-transition: all 0.5s ease; /* Firefox */
-                -ms-transition: all 0.5s ease; /* IE 9 */
-                -o-transition: all 0.5s ease; /* Opera */
-                transition: all 0.5s ease;
-                &:hover{
-                    -webkit-transform:scale(1.2); /* Safari and Chrome */
-                    -moz-transform:scale(1.2); /* Firefox */
-                    -ms-transform:scale(1.2); /* IE 9 */
-                    -o-transform:scale(1.2); /* Opera */
-                    transform:scale(1.2);
-                }
-            }
-        }
-
-        .internal_label{
-            background: #8D2E5C;
-            border-radius: 6px;
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 100px;
-            height: 36px;
-            color: white;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 13px;
-            font-weight: 500;
-        }
-
-        .text-published{
-            font-weight: 300;
-            font-size: 14px;
-            color: @date-text-color;
-            margin-bottom: 10px;
-            margin-top: 10px;
-            text-align: left;
-        }
-
-        .read-more-row{
-            .read-more{
-                font-size:16px;
-                color: @link-color;
-                position: relative;
-
-                &:after{
-                    position: absolute;
-                    left: 84px;
-                    top: 14px;
-                    content: '';
-                    width: 11px;
-                    height: 1.5px;
-                    background: @link-color;
-                    transition: all 0.3s ease-in-out;
-                }
-
-                &:hover{
-                    opacity: 1;
-                    &:after{
-                        right: -19px;
-                        width: 16px;
-                    }
-                }
-
-                .breakpoint-small-down({
-                    position: relative;
-                });
-            }
-            .breakpoint-huge-down({
-                position: relative;
-                bottom: unset;
-            });
-        }
+        font-size: 27px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: -0.54px;
     }
 
+    .related-news-records{
+        width: 416px;
+        max-width: 100%;
+        justify-self: end;
+    }
+
+    .news-item{
+        margin-bottom: 40px;
+    }
+
+    .home-news-cover{
+        display: flex;
+        padding: 0!important;
+        a{
+            width: 416px!important;
+            max-width: 100%;
+            height: 260px;
+            border-radius: 15px;
+            overflow: hidden;
+            position: relative;
+
+
+
+            &:hover {
+                cursor: none;
+            }
+
+            .breakpoint-large-down({
+                display: block;
+                width: 100%;
+            });
+
+            .read-more-btn {
+                position: absolute;
+                //display: none;
+                cursor: none !important;
+                pointer-events: none;
+                transform: translate(-50%, -50%);
+                z-index: 100;
+                text-align: center !important;
+                opacity: 1 !important;
+                border: none;
+                border-radius: 50%;
+                background: rgba(0, 0, 0, 0.25);
+
+                backdrop-filter: blur(3px);
+                display: flex;
+                width: 100px;
+                height: 100px;
+                padding: 41px 26px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                flex-shrink: 0;
+                color: #FFF;
+
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 100%; /* 16px */
+                letter-spacing: -0.48px;
+                text-transform: uppercase;
+
+                &.edge-right {
+                    transform: translate(-100%, -50%);
+                    animation: subtle-pulse-right 1.5s infinite alternate;
+                }
+
+                &.edge-left {
+                    transform: translate(0%, -50%);
+                    animation: subtle-pulse-left 1.5s infinite alternate;
+                }
+
+                &.edge-top {
+                    transform: translate(-50%, 0%);
+                    animation: subtle-pulse-top 1.5s infinite alternate;
+                }
+
+                &.edge-bottom {
+                    transform: translate(-50%, -100%);
+                    animation: subtle-pulse-bottom 1.5s infinite alternate;
+                }
+            }
+        }
+
+        img {
+            width: 416px;
+            max-width: 100%;
+            height: 260px;
+            object-fit: cover;
+            border-radius: 15px;
+            transition: all 0.5s ease-in-out;
+            position: relative;
+
+            &:hover{
+                transform: scale(1.2);
+            }
+
+            .breakpoint-large-down({
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            });
+        }
+
+        .blur_filter{
+            width: 416px;
+            max-width: 100%;
+            height: 260px;
+            border-radius: 15px;
+            background: linear-gradient(180deg, rgba(85, 68, 13, 0.00) 0%, #55440D 100%);
+            content: ' ';
+            top: 0;
+            left: 0;
+            position: absolute;
+        }
+
+
+        .breakpoint-large-down({
+            width: 100%;
+        });
+    }
 }
+
+//
+//.related_articles_news{
+//
+//    .news_column{
+//        display: flex;
+//        justify-content: center;
+//        margin-bottom: 50px;
+//        position: relative;
+//        width: 416px;
+//        max-width: 100%;
+//
+//        .news-container{
+//            display: flex;
+//            justify-content: start;
+//            flex-direction: column;
+//            padding: 0;
+//            h3{
+//                text-align: left;
+//            }
+//        }
+//
+//
+//
+//        .text-published{
+//            font-weight: 300;
+//            font-size: 14px;
+//            color: @date-text-color;
+//            margin-bottom: 10px;
+//            margin-top: 10px;
+//            text-align: left;
+//        }
+//
+//        .read-more-row{
+//            .read-more{
+//                font-size:16px;
+//                color: @link-color;
+//                position: relative;
+//
+//                &:after{
+//                    position: absolute;
+//                    left: 84px;
+//                    top: 14px;
+//                    content: '';
+//                    width: 11px;
+//                    height: 1.5px;
+//                    background: @link-color;
+//                    transition: all 0.3s ease-in-out;
+//                }
+//
+//                &:hover{
+//                    opacity: 1;
+//                    &:after{
+//                        right: -19px;
+//                        width: 16px;
+//                    }
+//                }
+//
+//                .breakpoint-small-down({
+//                    position: relative;
+//                });
+//            }
+//            .breakpoint-huge-down({
+//                position: relative;
+//                bottom: unset;
+//            });
+//        }
+//    }
+//
+//}
