--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -1,5 +1,5 @@
 html,body {
-    font-family: Arial, sans-serif;
+    font-family: LiberationSans, sans-serif;
     background-color: @background-color;
     color: @text-color-default;
     font-weight: 400;
@@ -43,7 +43,7 @@ button{
 
 p{
     color: @text-color-default;
-    font-family: Arial;
+
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -73,7 +73,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, .title, .head, .page_headi
     letter-spacing: -0.84px;
 }
 h1, h2{
-    font-family: Arial;
+
     font-size: 42px;
     font-style: normal;
     font-weight: 400;
@@ -209,6 +209,10 @@ ul.pagination{
         width: 100%;
         max-width: 100%;
         overflow: hidden;
+
+        .carousel-slide{
+            height: 100vh;
+        }
     }
 
     .video-next{
@@ -294,9 +298,10 @@ ul.pagination{
             content: '';
             background: rgba(37, 17, 0, 0.63);
             width: 100%;
-            height: 100%;
+            height: 100vh;
             top: 0;
             left: 0;
+            bottom: 0;
             z-index: 1;
         }
 
@@ -348,9 +353,11 @@ ul.pagination{
                 text-align: left;
                 margin-top: 23px;
                 margin-bottom: 23px;
+                width: 79%;
                 .breakpoint-large-down({
                     font-size: 40px;
                     line-height: 47px; /* 111.667% */
+                    width: 100%;
                 });
             }
             .intro-subtext{
@@ -380,7 +387,7 @@ ul.pagination{
                     justify-content: center;
                     color: #000;
                     border-radius: 10px;
-                    font-family: Arial;
+
                     font-size: 16px;
                     font-style: normal;
                     font-weight: 400;
@@ -417,6 +424,7 @@ ul.pagination{
             });
         }
     }
+
     &:not(.home){
         overflow: hidden;
         position: relative;
@@ -481,47 +489,6 @@ ul.pagination{
     }
 }
 
-.header-image.coming-soon,
-.header-image.coming-soon-training{
-    h1 {
-        &.underline {
-            padding-left: 0;
-            padding-right: 0;
-            padding-bottom: 0;
-            margin-bottom: 0;
-            padding-top: 0px;
-            font-size: 60px;
-            font-weight: 500;
-            color: white;
-            position: absolute;
-            top: 25%;
-            line-height: 1.2em;
-            text-align: center;
-
-            .breakpoint-large-down({
-                font-size: 40px;
-                padding-top: 0px;
-                top: 12%;
-            });
-        }
-    }
-}
-
-.coming_soon_intro{
-    position: absolute;
-    text-align: center;
-    top: 37%;
-    width: 800px;
-    max-width: 100%;
-    .breakpoint-laptop-down({
-        top: 45%;
-    });
-    .breakpoint-large-down({
-        top: 35%;
-    });
-}
-
-
 
 #layout-content {
     &:not(.home){
@@ -534,6 +501,10 @@ ul.pagination{
             color: #212121;
             font-weight: 500;
         }
+
+        .breakpoint-laptop-down({
+            overflow: hidden;
+        });
     }
 
     &.search{
@@ -548,10 +519,6 @@ ul.pagination{
             });
         }
     }
-
-    .breakpoint-large-down({
-        overflow: hidden;
-    });
 }
 
 .content-wrapper{
@@ -578,8 +545,9 @@ ul.pagination{
         justify-content: space-between;
         width: 100%;
         .item {
-            width: 100%;
+            width: fit-content;
             text-align: center;
+            margin: 0 18px 0 19px;
         }
     }
 
@@ -615,7 +583,7 @@ ul.pagination{
         &.light-background {
             background: @black-color;
             color: #FFF;
-            font-family: Arial;
+
             font-size: 14px;
             font-style: normal;
             font-weight: 400;
@@ -653,7 +621,7 @@ ul.pagination{
         list-style-type: none;
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: center;
         li{
             a{
                 color: white;
@@ -998,14 +966,13 @@ footer .align-items-center{
 
 .go-back-link{
     color: #898989;
-    font-family: Arial;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 19.2px; /* 120% */
     letter-spacing: -0.32px;
     margin-bottom: 40px;
-    padding-left: 9px;
+    padding-left: 15px;
     margin-left: 12px;
     position: relative;
 
@@ -1015,8 +982,8 @@ footer .align-items-center{
         position: absolute;
         width: 13px;
         height: 13px;
-        left: -4px;
-        top: 4px;
+        left: 0px;
+        top: 2px;
         background: url('../../assets/images/arrow-back.svg') no-repeat center center;
         background-size: contain;
     }
