--- a/assets/less/components/icons.less
+++ b/assets/less/components/icons.less
@@ -222,7 +222,14 @@
     content: "\e900";
 }
 .p-search:before {
-    content: "\ea82";
+    //content: "\ea82";
+    content: '';
+    background: url(../../assets/images/library-search.svg) center no-repeat;
+    background-size: 16px;
+    width: 24px;
+    height: 24px;
+    display: block;
+
 }
 .p-facebook:before {
     content: "\eaeb";
