--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -128,6 +128,7 @@
         margin-right: 8px;
         display: inline-flex;
         margin-bottom: 8px;
+        font-family: 'LiberationSans';
     }
 
     .body{
@@ -357,7 +358,7 @@
         //border-radius: 20px !important;
         //font-size: 16px !important;
         outline: none !important;
-        width: 100px !important;
+        width: 110px !important;
         background: url("../../assets/images/library-arrow.svg") center no-repeat !important;
         background-size: 11px !important;
         background-position: calc(100% - 10px) center !important
