--- a/assets/less/components/loggedin_menu.less
+++ b/assets/less/components/loggedin_menu.less
@@ -18,6 +18,7 @@
         align-items: center;
         justify-content: center;
         border-left: 1px solid #E4E4E4;
+        height: 20px;
         img{
             width: auto;
             float: left;
@@ -51,7 +52,7 @@
 
 .navbar-loggedin-user ul li{
   display: inline;
-  padding: 0 20px;
+  padding: 0 12px;
   .breakpoint-large-down({
     padding: 0 8px;
   })
