--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -73,16 +73,18 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, .title, .head, .page_headi
     letter-spacing: -0.84px;
 }
 h1, h2{
-
     font-size: 42px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.84px;
+
+    .breakpoint-laptop-down({
+        font-size: 3vw;
+    });
     .breakpoint-large-down({
         font-size: 30px;
-
-    })
+    });
 }
 
 
@@ -347,16 +349,18 @@ ul.pagination{
                 font-size: 60px;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 67px; /* 111.667% */
+                line-height: 1.11em; /* 111.667% */
                 letter-spacing: -1.8px;
                 text-transform: uppercase;
                 text-align: left;
                 margin-top: 23px;
                 margin-bottom: 23px;
                 width: 79%;
+                .breakpoint-laptop-down({
+                    font-size: 3vw;
+                });
                 .breakpoint-large-down({
                     font-size: 40px;
-                    line-height: 47px; /* 111.667% */
                     width: 100%;
                 });
             }
