--- a/assets/less/components/loggedin_menu.less
+++ b/assets/less/components/loggedin_menu.less
@@ -2,10 +2,10 @@
   background: @white-color;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.09);
     position: absolute;
-  z-index: 999;
-  height: 58px;
-  width: 100%;
-  padding-top: 19px;
+    z-index: 999;
+    height: 77px;
+    display: flex;
+    width: 100%;
     top: 254px;
 
     .navbar-collapse{
