--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -27,18 +27,24 @@ update_selector = "#gdpr-reload"
     {% endif %}
 
     <link href="{{ ['assets/less/theme.less']|theme }}" rel="stylesheet">
-    <link href="{{ ['assets/css/scale.css']|theme }}" rel="stylesheet">
-    <link href="{{ ['assets/css/light.css']|theme }}" rel="stylesheet">
+<!--    <link href="{{ ['assets/css/scale.css']|theme }}" rel="stylesheet">-->
+<!--    <link href="{{ ['assets/css/light.css']|theme }}" rel="stylesheet">-->
+
     <script src="{{ 'assets/js/jquery.js'|theme }}"></script>
-    <script src="{{ 'assets/js/anime.js'|theme}}"></script>
+
+<!--    <script src="{{ 'assets/js/anime.js'|theme}}"></script>-->
     <script src="{{ 'assets/js/app.js'|theme }}"></script>
     <script src="{{ 'assets/js/animations.js'|theme }}"></script>
+
     <script src="{{ 'assets/js/jquery-ui.js'|theme }}"></script>
+
+    <script src="{{ 'assets/js/bootstrap.min.js'|theme }}"></script>
     <script src="{{ 'assets/vendor/bootstrap/js/modal.js'|theme  }}"></script>
 <!--    <script type="text/javascript" src="{{ 'assets/js/slick.min.js'|theme }}"></script>-->
     <link rel="stylesheet" href="{{ 'assets/css/aos.css'|theme }}">
     <script src="{{ 'assets/js/aos.js'|theme }}"></script>
     <script src="{{ 'assets/js/ckeditor/ckeditor.js'|theme}}"></script>
+
 
 
 <!-- Google Tag Manager -->
