--- a/assets/less/components/jumbotron.less
+++ b/assets/less/components/jumbotron.less
@@ -201,7 +201,7 @@
         overflow: hidden;
         position: absolute;
         content: '';
-        background: linear-gradient(180deg, rgba(18, 13, 8, 0.00) 9.45%, #120D08 98.78%);
+        background: linear-gradient(180deg, rgba(18, 13, 8, 0.4) 0%, #120D08 100%);;
         width: 100%;
         height: 100%;
         top: 0;
@@ -273,7 +273,10 @@
                 background-size: contain;
                 display: inline-flex;
                 margin-top: 2px;
+            }
 
+            &:hover{
+                background: #E5BD3C;
             }
         }
     }
@@ -558,7 +561,7 @@
 
 
 .login, .Forgot{
-    .container{
+    .container:not(.menu_container){
         padding: 0;
         position: relative;
         top: -50vh; //child height
