--- a/assets/less/pages/media.less
+++ b/assets/less/pages/media.less
@@ -220,18 +220,196 @@
 }
 
 .images-container{
-
     display: flex;
     align-items: center;
     justify-content: center;
     max-width: 100%;
-    //background-color: @secondary-color;
-    //margin: 0 auto 20px auto;
     border-radius: 20px;
 
+    img{
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 20px;
+    }
+    .go-back-link{
+        margin-left: 0;
+    }
 
-    img {
-        object-fit: contain;
+
+
+
+}
+
+.media-images-container{
+    .links{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 20px;
+        background: rgba(20, 20, 20, 0.44);
+        width: 100%;
+        height: 150px;
+        max-width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 0.3s ease-in-out;
+        visibility: hidden;
+
+        form{
+            width: fit-content;
+        }
+    }
+
+    .title_container{
+        height: auto!important;
+        margin-bottom: 20px;
+    }
+
+    .zoom-btn {
+        position: absolute;
+        //display: none;
+        cursor: none !important;
+        pointer-events: none;
+        transform: translate(-50%, -50%);
+        z-index: 100;
+        text-align: center !important;
+        opacity: 1 !important;
+        border: none;
+        border-radius: 50%;
+        background: rgba(0, 0, 0, 0.25);
+        backdrop-filter: blur(3px);
+        display: flex;
+        width: 60px;
+        height: 60px;
+        padding: 18px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        flex-shrink: 0;
+        color: #FFF;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%; /* 16px */
+        letter-spacing: -0.48px;
+        text-transform: uppercase;
+
+        &.edge-right {
+            transform: translate(-100%, -50%);
+            animation: subtle-pulse-right 1.5s infinite alternate;
+        }
+
+        &.edge-left {
+            transform: translate(0%, -50%);
+            animation: subtle-pulse-left 1.5s infinite alternate;
+        }
+
+        &.edge-top {
+            transform: translate(-50%, 0%);
+            animation: subtle-pulse-top 1.5s infinite alternate;
+        }
+
+        &.edge-bottom {
+            transform: translate(-50%, -100%);
+            animation: subtle-pulse-bottom 1.5s infinite alternate;
+        }
+    }
+
+
+    .modal-dialog{
+        width: fit-content!important;
+        background: rgba(255, 255, 255, 0.41);
+        border-radius: 5px;
+        opacity: 1;
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        padding: 3px;
+        margin: auto;
+        margin-top: calc(~'50vh - 165px');
+        .breakpoint-large-down({
+            margin: 11% auto;
+        });
+    }
+    .modal-content{
+        border-radius: 5px!important;
+        box-shadow: none;
+        background: white;
+        //width: 623px!important;
+        max-width: 90vw;
+        height: fit-content;
+        padding: 0!important;
+        .col-xs-12{
+            padding: 0;
+        }
+
+        img{
+            object-fit: cover;
+            float: right;
+            height: 100%;
+            width: 100%;
+            border-bottom-right-radius: 5px;
+            border-top-right-radius: 5px;
+
+            .breakpoint-large-down({
+                border-radius: 5px;
+            });
+        }
+
+        .close{
+            color: #0027BE;
+            font-weight: 100;
+            font-size: 29px!important;
+            top: 20px !important;
+            right: 20px !important;
+            width: 20px;
+            height: 20px;
+            background: #FFFFFF;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+    }
+
+    .modal{
+        background: #44444478;
+
+        .modal-dialog{
+            width: 830px;
+            max-width: 90vw;
+        }
+
+        .modal-content{
+            border-radius: 10px;
+            box-shadow: none;
+            background: white;
+            padding: 50px 40px;
+            width: 830px;
+            max-width: 90vw;
+            .breakpoint-large-down({
+                padding: 10px;
+            });
+
+
+            .close{
+                color: #0027BE;
+                font-weight: 100;
+                font-size: 29px;
+                top: -30px;
+                right: -20px;
+                .breakpoint-large-down({
+                    top: -7px;
+                    right: -5px;
+                });
+            }
+
+
+        }
     }
 
 
@@ -395,18 +573,5 @@
             margin-top: 2px;
             display: flex;
         }
-    }
-}
-
-
-.images{
-    img{
-        width: 343px;
-        height: 315px;
-        object-fit: cover;
-        border-radius: 20px;
-    }
-    .go-back-link{
-        margin-left: 0;
     }
 }
