--- a/assets/less/pages/news.less
+++ b/assets/less/pages/news.less
@@ -348,6 +348,11 @@ nav:not(.navbar){
                 height: 100%;
                 object-fit: cover;
             });
+
+            &.zoom_icon{
+                width: 24px;
+                height: 24px;
+            }
         }
 
         .blur_filter{
@@ -468,14 +473,17 @@ nav:not(.navbar){
     position: relative;
     padding-bottom: 80px;
 
-    h1{
+    .view_all_container{
         position: sticky;
         top: 130px;
+    }
+    h1{
+
         padding: 30px 0 0 0;
     }
     .view_all{
-        position: sticky;
-        top: 270px;
+        //position: sticky;
+        //top: 270px;
         min-width: 130px;
     }
 
@@ -646,6 +654,8 @@ nav:not(.navbar){
                 object-fit: cover;
             });
         }
+
+
 
         .blur_filter{
             width: 100%;
@@ -826,73 +836,3 @@ nav:not(.navbar){
         });
     }
 }
-
-//
-//.related_articles_news{
-//
-//    .news_column{
-//        display: flex;
-//        justify-content: center;
-//        margin-bottom: 50px;
-//        position: relative;
-//        width: 416px;
-//        max-width: 100%;
-//
-//        .news-container{
-//            display: flex;
-//            justify-content: start;
-//            flex-direction: column;
-//            padding: 0;
-//            h3{
-//                text-align: left;
-//            }
-//        }
-//
-//
-//
-//        .text-published{
-//            font-weight: 300;
-//            font-size: 14px;
-//            color: @date-text-color;
-//            margin-bottom: 10px;
-//            margin-top: 10px;
-//            text-align: left;
-//        }
-//
-//        .read-more-row{
-//            .read-more{
-//                font-size:16px;
-//                color: @link-color;
-//                position: relative;
-//
-//                &:after{
-//                    position: absolute;
-//                    left: 84px;
-//                    top: 14px;
-//                    content: '';
-//                    width: 11px;
-//                    height: 1.5px;
-//                    background: @link-color;
-//                    transition: all 0.3s ease-in-out;
-//                }
-//
-//                &:hover{
-//                    opacity: 1;
-//                    &:after{
-//                        right: -19px;
-//                        width: 16px;
-//                    }
-//                }
-//
-//                .breakpoint-small-down({
-//                    position: relative;
-//                });
-//            }
-//            .breakpoint-huge-down({
-//                position: relative;
-//                bottom: unset;
-//            });
-//        }
-//    }
-//
-//}
