--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -747,8 +747,8 @@ ul.pagination{
             justify-content: center;
             margin-right: 10px;
             &:hover{
-                border: 1px solid @button-background-color;
-                background: @button-background-color;
+                border: 1px solid #E5BD3C;
+                background: #E5BD3C;
                 opacity: 1!important;
             }
             &.p-bluesky{
