--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -39,7 +39,7 @@ update_selector = "#gdpr-reload"
     <script src="{{ 'assets/js/jquery-ui.js'|theme }}"></script>
 
     <script src="{{ 'assets/js/bootstrap.min.js'|theme }}"></script>
-    <script src="{{ 'assets/vendor/bootstrap/js/modal.js'|theme  }}"></script>
+<!--    <script src="{{ 'assets/vendor/bootstrap/js/modal.js'|theme  }}"></script>-->
 <!--    <script type="text/javascript" src="{{ 'assets/js/slick.min.js'|theme }}"></script>-->
     <link rel="stylesheet" href="{{ 'assets/css/aos.css'|theme }}">
     <script src="{{ 'assets/js/aos.js'|theme }}"></script>
