--- a/assets/less/pages/media.less
+++ b/assets/less/pages/media.less
@@ -237,8 +237,6 @@
     }
 
 
-
-
 }
 
 .media-images-container{
@@ -319,89 +317,87 @@
         }
     }
 
+}
 
-    .modal-dialog{
-        width: fit-content!important;
-        background: rgba(255, 255, 255, 0.41);
-        border-radius: 5px;
-        opacity: 1;
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        padding: 3px;
-        margin: auto;
-        margin-top: calc(~'50vh - 165px');
-        .breakpoint-large-down({
-            margin: 11% auto;
-        });
-    }
-    .modal-content{
-        border-radius: 5px!important;
-        box-shadow: none;
-        background: white;
-        //width: 623px!important;
-        max-width: 90vw;
-        height: fit-content;
-        padding: 0!important;
-        .col-xs-12{
-            padding: 0;
-        }
+.images{
 
-        img{
-            object-fit: cover;
-            float: right;
-            height: 100%;
-            width: 100%;
-            border-bottom-right-radius: 5px;
-            border-top-right-radius: 5px;
 
-            .breakpoint-large-down({
-                border-radius: 5px;
-            });
-        }
 
-        .close{
-            color: #0027BE;
-            font-weight: 100;
-            font-size: 29px!important;
-            top: 20px !important;
-            right: 20px !important;
-            width: 20px;
-            height: 20px;
-            background: #FFFFFF;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-    }
 
     .modal{
-        background: #44444478;
+        background: rgba(0, 0, 0, 0.63);
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        top: 0;
+        left: 0;
+        z-index: 999;
+        overflow: hidden;
 
         .modal-dialog{
-            width: 830px;
-            max-width: 90vw;
+            //width: 830px;
+            //max-width: 70vw;
+            //width: fit-content!important;
+            //max-height: 60vh;
+            //background: rgba(255, 255, 255, 0.41);
+            border-radius: 15px;
+            opacity: 1;
+            //backdrop-filter: blur(5px);
+            //-webkit-backdrop-filter: blur(5px);
+            //padding: 3px;
+            margin: auto;
+            display: table;
+            clear: both;
+            overflow:auto;
+
+            margin-top: calc(~'30vh - 165px');
+            z-index: 999;
         }
 
         .modal-content{
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: none;
-            background: white;
-            padding: 50px 40px;
-            width: 830px;
-            max-width: 90vw;
-            .breakpoint-large-down({
-                padding: 10px;
-            });
+            //background: white;
+            padding: 0!important;
+            position: relative;
+            display: table;
+            clear: both;
+            overflow:auto;
 
+            .slides{
+                //width: 100%;
+                //height: 100%;
+                border-radius: 15px;
+                overflow:auto;
+                img{
+                    max-width: 70vw;
+                    max-height: 60vh;
+                    border-radius: 15px;
+                    object-fit: contain;
+                }
+            }
 
             .close{
-                color: #0027BE;
+                display: flex;
+                width: 43px;
+                height: 43px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                flex-shrink: 0;
+                border-radius: 50%;
+                background: rgba(0, 0, 0, 0.25);
+
+                backdrop-filter: blur(3px);
+
                 font-weight: 100;
                 font-size: 29px;
-                top: -30px;
-                right: -20px;
+                top: 16px;
+                right: 20px;
+                color: white;
                 .breakpoint-large-down({
                     top: -7px;
                     right: -5px;
@@ -412,6 +408,46 @@
         }
     }
 
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        width: 100px;
+        height: 100%;
+        top: 0;
+        background-color: transparent;
+        border-radius: 50%;
+        user-select: none;
+        -webkit-user-select: none;
+        background-repeat: no-repeat;
+        background-position: center;
+        z-index: 5;
+
+        .breakpoint-small-down({
+            width: 48px;
+            height: 48px;
+        });
+    }
+
+    .next {
+        right: 0px;
+        background-image: url('../../assets/images/gallery_arrow_right.svg');
+        background-size: 24px;
+        background-position: right 23px center;
+    }
+
+    .prev {
+        left: 0px;
+        background-image: url('../../assets/images/gallery_arrow_left.svg');
+        background-size: 24px;
+        background-position: left 23px center;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover,
+    .next:hover {
+        opacity: 0.65
+    }
 
 }
 
